--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-Django==4.2.7
-celery==5.3.4
+Django==5.2.5
+celery==5.3.6
 redis==5.0.1
 python-dotenv==1.0.0
-mypy==1.5.1
-django-stubs==4.2.2
-django-celery-beat==2.5.0
+mypy==1.10.0
+django-stubs[compatible-mypy]>=5.0.0
+django-celery-beat==2.8.1
 django-celery-results==2.5.1
-types-redis==4.6.0.10
-types-python-dateutil==2.8.19.14
+types-redis>=4.6.0.11
+types-python-dateutil>=2.8.19.14
