--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Environment files
+.env
+.env.*
+!.env.example
+!.env.*.example
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Requirements files
+requirements.txt
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
